fixes bug when nav covers header

--- a/client/styles/less/styles.less
+++ b/client/styles/less/styles.less
@@ -106,7 +106,17 @@ a {
 	background-color: @white;
 	opacity: .9;
 	border-bottom: 1px solid @border-color;
+}
 
+// this class encapsulates the header icons in the nav
+// which are there for the case when the nav covers the header
+.header-cover {
+	height: @header-height;
+	opacity: .9;
+	float: left;
+}
+
+.header-inner {
 	text-align: left;
 
 	i {
